# summerschool_workshop

./: .dockerignore  .env.template  .gitignore  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  admission_faq_large.csv  chainlit.md  docker-compose.yml  pyproject.toml  test_sparse_search.py  ui.py
config/: __init__.py  company4_demo.py  model_config.json  system_config.py
docs/: README.md  api.md  architecture.md  deployment.md  environment.md  examples.md  mcp.md  quickstart.md  setup.md  tools.md  troubleshooting.md
src/: __init__.py
src/data/: __init__.py
src/data/cache/: back.py  cache.md  memory_handler.py  redis_cache.py
src/data/embeddings/: __init__.py  embedder.py  embedding_engine.py  embeddings.md  test.py
src/data/milvus/: indexing.py  milvus.md  milvus_client.py
src/data/mock_data/: 8_De_Mini_HandsOn_AI_Agents.docx  Admission_FAQ_final.csv  Company_Policy_final.csv  Course_FAQ_final.csv  Customer_Service_FAQ_final.csv  Freshmen_FAQ_final.csv  HR_FAQ.xlsx  HR_FAQ_final.csv  HR_FAQ_full.xlsx  Kich_ban_Demo_Mini_QA_Agent.docx  Product_Info_final.csv  Product_Info_final_make_sense.csv  Scholarship_Info_final.csv  admission_faq_large.csv  admission_faq_large.xlsx  merge.csv  results.csv  test_document.txt
src/data/mock_data/company4/: company_policy_final.csv  company_policy_hr.csv  company_policy_it.csv  prompt.py
src/data/prompts/: admission_prompt.py  company1.py  company2.py  company4_demo_prompt.py  demo.py  mini_qa_agent_prompt.py  prompts.md  student1.py
src/handlers/: error_handler.py  handlers.md  ui_handlers.py
src/llm/: base.py  gemini_client.py  llm.md
src/mcp_tools/: mcp.md
src/prompt_engineering/: adalflow_optimizations.py  chainer.py  templates.py
src/utils/: APIdrug_side_effect.py  __init__.py  call_files.py  logger.py
src/utils/basetools/: __init__.py  calculator_tool.py  classfication_tool.py  create_tool_templates.py  createtool_guidelines.md  document_chunking_tool.py  faq_tool.py  file_reading_tool.py  http_tool.py  merge_files_tool.py  search_in_file_tool.py  search_relevant_document_tool.py  search_web_tool.py  semantic_splitter.py  send_email_tool.py  testtools.py  tools.md
src/utils/crawl_data/: crawl_data.md  datasheetmaker.py  mergefile.py
workflow/: SAMPLE.py  company1.py  company2.py  company4_demo.py  company_flow_1.py  demo.py  demo_with_memory.py  main.py  mini_qa_agent.py  student1.py  template_create_tool.py  test_document_workflow.py  workflow.md
